--- a/styles.css
+++ b/styles.css
@@ -30,20 +30,20 @@ html {
   margin-top: 30px;
   margin-left: 50px;
   margin-bottom: 30px;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 20px;
+  font-family: "poppins", sans-serif;
+  font-size: 30px;
   font-weight: bold;
   color: white;
 }
 
 .yel {
   margin-left: 10px;
-  font-family: "Times New Roman", Times, serif;
-  font-weight: 100;
+  font-family: "poppins", sans-serif;
+  font-weight: 120;
   letter-spacing: 3px;
   color: white;
-  margin-top: 20px;
-  font-size: 28px;
+  margin-top: 70px;
+  font-size: 33px;
   /* padding: 3px; */
 }
 
@@ -54,7 +54,7 @@ html {
 }
 
 h1 {
-  font-size: 72px;
+  font-size: 90px;
   margin: 0;
 }
 
