--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ html {
   letter-spacing: 3px;
   color: white;
   margin-top: 30px;
-  font-size: 33px;
+  font-size: 48px;
   /* padding: 3px; */
 }
 
@@ -54,7 +54,7 @@ html {
 }
 
 h1 {
-  font-size: 90px;
+  font-size: 102px;
   margin: 0;
 }
 
@@ -64,7 +64,7 @@ p {
 }
 
 .subscribe-section {
-  margin-top: 100px;
+  /* margin-top: 40px; */
   width: 100%;
   display: flex;
   flex-direction: column;
