--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,6 @@ p {
 }
 
 .subscribe-section {
-  /* margin-top: 40px; */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -115,6 +114,8 @@ p {
   margin-top: 18px;
   font-size: 12px;
 }
+
+/* Styles specific to 14-inch laptops with Full HD resolution */
 
 /* Media Queries for Responsiveness */
 @media (max-width: 1024px) {
