--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ html {
 .yel {
   margin-left: 10px;
   font-family: "poppins", sans-serif;
-  font-weight: 120;
+  font-weight: 120px;
   letter-spacing: 2px;
   color: white;
   margin-top: 10px;
@@ -100,7 +100,7 @@ p {
 }
 
 .social-icons {
-  margin-top: 60px;
+  margin-top: 90px;
 }
 
 .social-icon {
